# ai-commit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCED_TUI_INTEGRATION.md  FOCUS_SWITCHING_GUIDE.md  HIERARCHICAL_TUI.md  LICENSE  Makefile  README.md  README_BACKUP_58306.md  README_BASE_58306.md  README_LOCAL_58306.md  REFACTORING_PLAN.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  RESULTS_VIEW_FIX.md  TEST_REFACTOR_PLAN.md  TEST_REFACTOR_SUMMARY.md  UI_REDESIGN_PLAN.md  WORKFLOW_OPTIMIZATION.md  commit-convention.md  commit-prompt.txt  custom_report.md  demo_tui.sh  demo_tui_v2.sh  example.env  file_list_toggle_summary.sh  final_branch_gitlog_fix.md  fix_summary.sh  install.sh  providers.toml  requirements-prompt.txt  run_e2e_tests.sh  setup-shortcuts.sh  side_by_side_summary.sh  temp_widgets.txt  test_ai_commit.md  test_branch_gitlog_fix.md  test_commit_completion.md  (+39 more)
docs/: AI-Commit代码审查系统-技术实现文档.md  AI-Commit代码审查系统-需求设计文档.md  AI-Commit功能特性完整指南.md  AI_PROVIDER_CONFIG.md  ALIAS_SETUP.md  CI构建与发布说明.md  DIFF_VIEWER_IMPLEMENTATION.md  ENHANCED_TUI_GIT_LOG.md  GRV_FEATURES_IMPLEMENTATION.md  Mermaid修复说明.md  QUERY_HISTORY.md  QUERY_HISTORY_TUI.md  QUICK_REFERENCE.md  SHORTCUTS.md  TUI_API_DESIGN.md  TUI_COMPONENT_RELATIONSHIPS.md  TUI_CORE_MODULES.md  TUI_IMPLEMENTATION_TASKS.md  TUI_INTEGRATION_ANALYSIS.md  TUI_OPTIMIZATION_REPORT.md  TUI_TECHNICAL_DESIGN.md  storage-middleware-implementation.md  代码审查功能详解.md  功能特性详解.md  安装与使用.md  技术文档.md  文档总览.md  系统架构与流程图.md  系统需求文档.md  需求文档.md
examples/: enhanced_parallel_example.rs  fs_cache_example.rs  memory_management_example.rs  parallel_cache_example.rs  storage_example.rs
shell/: ac.sh  ac.zsh
src/: ai.rs  args.rs  config.rs  diff_viewer.rs  example.rs  git.rs  internationalization.rs  lib.rs  main.rs  prompt.rs  query_history.rs  tui.rs  tui_enhanced.rs  tui_hierarchical.rs  ui.rs
tests/: E2E_TESTS_README.md  args_test.rs  cognitive_complexity_test.rs  commit_workflow_tests.rs  complexity_analysis_test.rs  config_file_loading_e2e_tests.rs  cross_file_duplication_test.rs  cyclomatic_complexity_test.rs  duplication_analysis_test.rs  duplication_detection_test.rs  environment_variables_e2e_tests.rs  force_push_and_combinations_tests.rs  function_length_test.rs  git_worktree_tests.rs  integration_tests.rs  memory_management_integration_test.rs  messaging_integration_test.rs  multi_provider_switching_e2e_tests.rs  nesting_depth_test.rs  new_features_tests.rs  notification_dingtalk_test.rs  notification_email_test.rs  notification_failure_logger_test.rs  notification_feishu_test.rs  notification_integration_test.rs  notification_monitoring_test.rs  notification_retry_test.rs  (+9 more)
(+273 files in other folders)
