[package]
name = "ai-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false,  features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
regex = "1"
once_cell = "1.19.0"
bytes = "1.5"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
futures = "0.3"