[package]
name = "ai-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false,  features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
regex = "1"
once_cell = "1.19.0"
bytes = "1.5"

# Storage dependencies
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Database dependencies (optional features)
mongodb = { version = "2.8", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"], optional = true }

# Messaging dependencies (optional features)
rdkafka = { version = "0.36", optional = true }

# Cache dependencies
lru = "0.10"
bincode = "1.3"
flate2 = "1.0"

# Additional analysis dependencies
walkdir = "2.4"
ignore = "0.4"
sha2 = "0.10"
log = "0.4"

# Error handling
thiserror = "1.0"

# Configuration management
toml = "0.8"
serde_yaml = "0.9"
num_cpus = "1.0"
url = "2.4"

[features]
default = ["storage-sqlite"]
storage-mongodb = ["mongodb"]
storage-mysql = ["sqlx"]
storage-sqlite = ["sqlx/sqlite"]
messaging-kafka = ["rdkafka"]
all-storage = ["storage-mongodb", "storage-mysql", "storage-sqlite"]
all-messaging = ["messaging-kafka"]
full = ["all-storage", "all-messaging"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
futures = "0.3"